apps/devsecops-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-api
  labels:
    app: devsecops-api
spec:
  selector:
    app: devsecops-api
  ports:
  - name: http
    port: 80
    targetPort: 5000
  type: ClusterIP
