apps/devsecops-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: api.nalorwu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsecops-api
            port:
              number: 80
